--- a/RemittanceChatbotUI/src/app/components/login/login.component.html
+++ b/RemittanceChatbotUI/src/app/components/login/login.component.html
@@ -25,8 +25,8 @@
                 </div>
             </div>
             <div class="form-check">
-                <input type="checkbox" id="rememberMe" formControlName="rememberMe">
-                <label for="rememberMe">Remember me</label>
+                <input type="checkbox" id="rememberMe" formControlName="rememberMe" class="form-check-input">
+                <label for="rememberMe" class="form-check-label">Remember me</label>
             </div>
 
             <div class="alert alert-danger" *ngIf="error">
