--- a/RemittanceChatbotUI/src/app/components/remittance-form/remittance-form.component.scss
+++ b/RemittanceChatbotUI/src/app/components/remittance-form/remittance-form.component.scss
@@ -177,3 +177,19 @@
         }
     }
 }
+
+.alert {
+    padding: 0.75rem 1rem;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+
+    &.alert-danger {
+        background-color: #f8d7da;
+        color: #721c24;
+        border: 1px solid #f5c6cb;
+    }
+
+    i {
+        margin-right: 0.5rem;
+    }
+}
